# ProjektIP

./: LICENSE  README.md  projekt_etap1.txt  projekt_etap2.txt
code/: CMakeLists.txt  attach_to_shared.c  attach_to_shared.h  shared_memory.c  shared_memory.h
code/krancowki/: CMakeLists.txt  main.c
code/przyciski/: CMakeLists.txt  main.c
code/silnik/: CMakeLists.txt  main.c
code/sterownik/: CMakeLists.txt  hash.c  hash.h  main.c  password_check.c  password_check.h
code/szyba/: CMakeLists.txt  main.c
